Major changes: add application UI and controlled service access
